<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jackal_slam_cartographer</name>
  <version>0.0.1</version>
  <description>Cartographer SLAM Node using jackal</description>
  <maintainer email="ans2568@gmail.com">jackal</maintainer>
  <license>Apache License 2.0</license>

  <depend>cartographer_ros</depend>
  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
